dgm-lib v2.2.2
 * Added `dgm::DynamicBuffer::isValidIndex` for testing whether there is something at index

dgm-lib v2.2.1
 * `dgm::DynamicBuffer` and `dgm::StaticBuffer` have method `clone` for explicit copying and are movable and move-assignable
 * Introduced `dgm::SpatialIndex` which acts as a base class for `dgm::SpatialBuffer` and contains only interface for spatial lookup, not the physical storage
	* It also has a `clear` method for removing all items from lookup
 * Fixed signature of `dgm::Rect::getCenter` - it returned a reference to a temporary

dgm-lib v2.2.0
 * Removed `Conversion` class, implementation moved to `Math`
	* `PIOVER180` and `_180OVERPI` are now defined using std::numbers::pi_v
	* `cartesianToPolar` now returns struct `PolarCoords`
	* `polarToCartesian` now accepts struct `PolarCoords`
 * Overhauled `Math` class
	* `vectorSize` renamed to `getSize`
	* `getUnitVector` renamed to `toUnit`
	* `rotateVector` renamed to `getRotated`
	* `dotProduct` renamed to `getDotProduct`
		* Also fixed bad formula for this function
	* `approxEqual` renamed to `isApproxEqual`
	* `radialDifference` renamed to `getRadialDifference`
	* With the exception of `getRadialDifference`, all functions that work with angles by default work with degrees, but this can be changed to radians using a function template so it is optimized during compilation, like `dgm::Math::getRotated<dgm::Math::AngleType::Radians>(...)`
 * `dgm::DynamicBuffer` is now movable
 * `dgm::SpatialBuffer` is now movable
 * `dgm::SpatialBuffe::getOverlapCandidates` is now `const`
 * `dgm::DynamicBuffer` and `dgm::SpatialBuffer` now expose `DataType` and `IndexingType`

dgm-lib v2.1.2
 * Added `getUnitVector` math function
 * Fixed `getClosestPointOnLine` returning bad values for most lines

dgm-lib v2.1.1
 * `dgm::Animation` is initialized with a random state when constructed with animation states
	* This way the program doesn't immediately throw an exception when programmer forgets to set some state